--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+.card img{
+width:100%;
+  
+}
+.card{
+  width:25%;
+  margin:10px;
+
+}
+.maflex{
+  display: flex;
+
+}
